# WDP_Lab7

./: .gitignore  CMakeLists.txt  main.cpp
Zadania/: Zadanie71.cpp  Zadanie71.h  Zadanie72.cpp  Zadanie72.h  Zadanie73.cpp  Zadanie73.h  Zadanie74.cpp  Zadanie74.h  Zadanie75.cpp  Zadanie75.h  Zadanie76.cpp  Zadanie76.h  Zadanie77.cpp  Zadanie77.h  Zadanie78.cpp  Zadanie78.h  Zadanie79.cpp  Zadanie79.h
